Fixes alignment of form in hero

--- a/frontend/src/app/register/register.component.scss
+++ b/frontend/src/app/register/register.component.scss
@@ -3,7 +3,15 @@
   padding-top: 8rem;
   padding-bottom: 8rem;
 
+  .hero-content {
+    display: grid;
+    @media (min-width: 768px) { grid-template-columns: 1fr; }
+    @media (min-width: 992px) { grid-template-columns: 2fr 1fr; }
+    @media (min-width: 1200px) { grid-template-columns: 1fr 1fr; }
+  }
+
   .form.border-box {
+    max-width: 100%;
     background-color: #FFFFFF;
     padding: 2em;
   }
